# Packed_DAWG

./: .gitignore  CMakeLists.txt  main.cpp
includes/: dawg.hpp  full_text_index.hpp  hashmap.hpp  level_ancestor.hpp  map.hpp  ordered_map.hpp  vector.hpp
utils/: check_memory.sh  download_files.sh
